# ChunkyClPlugin

./: .gitignore  README.md  build.gradle
.github/workflows/: development.yml  gradle.yml  stable.yml
benchmark/: readme.md
benchmark/OpenCL_test/: OpenCL_test.json  OpenCL_test.octree2
src/main/java/chunkycl/: AbstractOpenClRenderer.java  ChunkyCl.java  Finalizer.java  GpuRayTracer.java  GpuRayTracer.java.old  GpuSelector.java  KernelLoader.java  NishitaSky.java  OctreeIntersectCl.java  OpenClPathTracingRenderer.java  OpenClPreviewRenderer.java  OpenClPreviewRenderer.java.old  OpenClRenderer.java  OpenClTestRenderer.java  RayCl.java  RayTracerCl.java  RenderManagerCl.java  RenderWorkerCl.java  RenderWorkerCl.java.old
src/main/java/chunkycl/renderer/: KernelLoader.java  RendererInstance.java
src/main/native/: Cargo.toml
src/main/native/src/: ffi_guard.rs  lib.rs  loading_structs.rs  panic_catch.rs  resource_palette.rs
src/main/opencl/: .gitignore  CMakeLists.txt
src/main/opencl/include/: block.h  bvh.h  material.h  octree.h  scene.h  wavefront.h
src/main/opencl/kernel/: .clangd  CMakeLists.txt
src/main/opencl/kernel/include/: block.h  bvh.h  camera.h  constants.h  kernel.h  material.h  octree.h  primitives.h  random.h  rayTracer.cl  rt.h  sky.h  textureAtlas.h  utils.h
src/main/opencl/tonemap/: CMakeLists.txt  opencl.h
src/main/opencl/tonemap/include/: double.h  gamma_correction_filter.cl  post_processing_filter.cl  rgba.h
src/main/resources/: octreeIntersect.cl  plugin.json  rayTracer.cl
src/main/resources/kernel/: oldRayTracer.cl  rayTracer.cl
(+131 files in other folders)
